*** empty log message ***

--- a/README.org
+++ b/README.org
@@ -1,14 +1,19 @@
 * PHP Eldoc Plugin
-
+  
+#+begin_example
+   
   This is php-eldoc, a eldoc-mode plugin for PHP source code.
   The hash table is mostly based on Arne Jørgensen's php-extras.
 
+#+end_example
+  
 ** License under GPL3
+   
+#+begin_example
 
    ;; Copyright (C) 2012  Zeno Zeng
    ;; Copyright (C) 2012  Arne Jørgensen;
-
-
+   
    ;; This program is free software; you can redistribute it and/or modify
    ;; it under the terms of the GNU General Public License as published by
    ;; the Free Software Foundation, either version 3 of the License, or
@@ -21,9 +26,14 @@
    
    ;; You should have received a copy of the GNU General Public License
    ;; along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+#+end_example
+   
    
 ** Usage
-   
+
+#+begin_example
+
    ;; (add-hook 'php+-mode-hook
    ;; 	  '(lambda ()
    ;; 	     (set
@@ -31,3 +41,4 @@
    ;; 	      'php-eldoc-function)
    ;; 	     (eldoc-mode)))
    
+#+end_example
