--- a/README.org
+++ b/README.org
@@ -1,44 +1,50 @@
 * PHP Eldoc Plugin
   
-#+begin_example
-   
   This is php-eldoc, a eldoc-mode plugin for PHP source code.
-  The hash table is mostly based on Arne Jørgensen's php-extras.
 
-#+end_example
+  The hash table is mostly based on Arne Jørgensen's php-extras.
   
 ** License under GPL3
    
-#+begin_example
+    Copyright (C) 2012  Zeno Zeng
 
-   ;; Copyright (C) 2012  Zeno Zeng
-   ;; Copyright (C) 2012  Arne Jørgensen;
+    Copyright (C) 2012  Arne Jørgensen;
+
    
-   ;; This program is free software; you can redistribute it and/or modify
-   ;; it under the terms of the GNU General Public License as published by
-   ;; the Free Software Foundation, either version 3 of the License, or
-   ;; (at your option) any later version.
+    This program is free software; you can redistribute it and/or modify
+
+    it under the terms of the GNU General Public License as published by
+
+    the Free Software Foundation, either version 3 of the License, or
+
+    (at your option) any later version.
+
    
-   ;; This program is distributed in the hope that it will be useful,
-   ;; but WITHOUT ANY WARRANTY; without even the implied warranty of
-   ;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-   ;; GNU General Public License for more details.
+    This program is distributed in the hope that it will be useful,
+
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+
+    GNU General Public License for more details.
+
    
-   ;; You should have received a copy of the GNU General Public License
-   ;; along with this program.  If not, see <http://www.gnu.org/licenses/>.
+    You should have received a copy of the GNU General Public License
+
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 #+end_example
    
    
 ** Usage
 
-#+begin_example
+#+begin_src emacs-lisp
 
-   ;; (add-hook 'php+-mode-hook
-   ;; 	  '(lambda ()
-   ;; 	     (set
-   ;; 	      (make-local-variable 'eldoc-documentation-function)
-   ;; 	      'php-eldoc-function)
-   ;; 	     (eldoc-mode)))
+    (add-hook 'php+-mode-hook
+    	  '(lambda ()
+    	     (set
+    	      (make-local-variable 'eldoc-documentation-function)
+    	      'php-eldoc-function)
+    	     (eldoc-mode)))
    
-#+end_example
+#+end_src
